[package]
name = "dicrs"
version = "1.0.0"
edition = "2021"
authors = ["s2sadeghi"]
description = "A simple dictionary written in rust"
repository = "https://github.com/s2sadeghi/dicrs"
license = "GPL-3.0"

[dependencies]
chrono = "0.4.39"
clipboard = "0.5.0"
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }

[features]
default = ["leitner"]
leitner = []
# [build]
# rustflags = ["-C", "target-cpu=native"]

# [profile.release]
# panic = "abort"
# opt-level = "z"
# strip = "symbols"
# codegen-units = 1
# lto = "fat"
